Fixed footer display on mobile

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -5,7 +5,6 @@
     padding-bottom: $l-size;
     min-height: 10vh;
     font-family: "Helvetica Neue", helvetica, arial, sans-serif;
-    max-width: 70vw;
     margin: $l-size auto 0 auto;
 
     width: 50rem;
@@ -13,7 +12,7 @@
     // text-align: justify;
 
     @media screen and (max-width: $vertical-breakpoint) {
-        display: none;
+       max-width: 75vw;
     }
 }
 
